<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Wizard Fight</string>
    <!--  Preferences -->
    <string name="player_name">Player name</string>
    <string name="player_name_summary">Choose player name for PC connection</string>
    <string name="wizard">Wizard</string>
    <!--  BluetoothService -->
    <string name="bt_not_enabled">Bluetooth is not enabled. </string>
    <!--  DeviceListActivity -->
    <string name="bt_not_available">Bluetooth is not available</string>
    <string name="scanning">Scanning for devices…</string>
    <string name="select_device">Select a device</string>
    <string name="none_paired">   No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <!--  Main Menu -->
    <string name="create_game">Create game</string>
    <string name="join_game">Join game</string>
    <string name="training">Training</string>
    <string name="connect_to_pc">Connect to PC</string>
    <string name="tutorial">Tutorial</string>
    <string name="spellbook">Spellbook</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <!--  Bt Fight Activity -->
    <string name="creating_the_game">Creating the game…</string>
    <string name="connected_to">Connected to&#160;</string>
    <string name="client_waiting">Waiting for opponent…</string>
    <string name="trying_to_connect">Trying to connect..</string>
    <string name="cancel">Cancel</string>
    <string name="connection_lost">Connection was lost. Leaving fight</string>
    <string name="connection_fail">Unable to connect to the device</string>
    <!-- Fight Activity -->
    <string name="countdown_fight">Fight!</string>
    <string name="title_bot">Select complexity</string>
    <string name="bot_easy">Easy</string>
    <string name="bot_mid">Middle</string>
    <string name="bot_hard">Hard</string>
    <string name="you_win">"You win!"</string>
    <string name="you_lose">"You lose!"</string>
    <string name="fight_ended">Fight ended</string>
    <string name="restart">Restart</string>
    <!--  Connection to desktop  -->
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="show_settings">Show settings</string>
    <string name="net_name">Net name</string>
    <string name="pc_conn_fail">Unable to connect</string>
	<string name="pc_conn_established">Connection to PC: established</string>
	<string name="pc_conn_not_established">Connection to PC: not established</string>
	<string name="no_network_conn">No connection</string>
    <string name="no_network_conn2">Please connect to the WIFI network</string>
	<string name="disabled">disabled</string>
	<string name="enabled">enabled</string>
    <string name="achievements">Achievements</string>
    <string name="autoconnect_google_title">Connect to Play Games</string>
    <string name="autoconnect_google_summary">Automatically connect to Play Games with game start</string>

</resources>
