<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/connect_to_pc"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/pc_conn_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pc_conn_not_established"
        android:layout_marginBottom="43dp"
        android:layout_above="@+id/connect_to_pc"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:inputType="numberDecimal"
        android:digits="0123456789."/>

    <TextView
        android:id="@+id/net_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/net_name"
        android:layout_above="@+id/ip"
        android:layout_marginBottom="45dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

</RelativeLayout>