<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/paper" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_paired_devices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spell_name"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/title_paired_devices"
            android:textColor="#ffc8c8c8"
            android:textSize="18sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/paired_devices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <RelativeLayout
            android:id="@+id/title_new_dev_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spell_name"
            android:gravity="center" 
            android:visibility="gone"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/title_new_devices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/scanning"
                android:textColor="#ffc8c8c8"
                android:textSize="18sp" />

            <ProgressBar
                style="@android:style/Widget.ProgressBar.Small"
                android:id="@+id/devices_scan_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/title_new_devices"
                android:layout_marginLeft="5dp"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/new_devices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/button_scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/button_scan" />
    </LinearLayout>

</ScrollView>